[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-radio"
version = "0.1.0"
description = "Daily news audio generator using NotebookLM and Brave Search"
requires-python = ">=3.12"
dependencies = [
    "notebooklm-py>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
news-radio = "news_radio.main:main"
