[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-radio"
version = "0.2.0"
description = "Daily news audio generator using NotebookLM CLI and Discord Webhook"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
news-radio = "news_radio.main:main"
